--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,8 @@
 {
+    "parser": "@typescript-eslint/parser",
+    "plugins": [
+        "@typescript-eslint"
+    ],
     "env": {
         "es6": true,
         "node": true
